# egosocial_env

./: .gitignore  EXPERIMENT_LOG.md  FUTURE_WORK.md  README.md  __init__.py  client.py  minimal_hf_trl_colab.ipynb  models.py  openenv.yaml  pyproject.toml  world_model.py
scripts/: eval_reason2.py  smoke_test.py  train_grpo_reason2.py
server/: Dockerfile  __init__.py  app.py  egosocial_env_environment.py  requirements.txt
