# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-egosocial-env"
version = "0.1.0"
description = "Two-turn social interaction environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]==0.2.1",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "accelerate>=1.2.0",
    "datasets>=3.1.0",
    "peft>=0.13.0",
    "Pillow>=10.0.0",
    "transformers>=4.51.0",
    "trl>=0.20.0",
    "torchvision>=0.22.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m egosocial_env.server.app
server = "egosocial_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["egosocial_env", "egosocial_env.server"]
package-dir = { "egosocial_env" = ".", "egosocial_env.server" = "server" }

[tool.setuptools.package-data]
egosocial_env = ["data/*.json"]
